--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--
-    <link rel="stylesheet" href="scss/style.css">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/custom.css">
     <title>Aniluv - Vegan Restaurant</title>
 </head>
@@ -90,7 +89,7 @@
                 </div>
 
                 <div class="mb-4">
-                    <label class="form-label">Which Restaurant?</label>
+                    <label class="form-label">Which restaurant?</label>
                     <select class="form-select" aria-label="Floating label select example">
                         <option selected>No specific one</option>
                         <option value="1">Bruxelles</option>
@@ -107,7 +106,7 @@
                 </div>
 
                 <div class="mb-4 d-flex justify-content-end align-items-center">
-                    <a class="btn btn-dark btn-sm fs-6" href="#" role="button"><img class="img-color m-2" src="img/email.png">Send</a>
+                    <a class="btn btn-dark btn-sm fs-6 pe-3" href="#" role="button"><img class="img-color m-2" src="img/email.png">Send</a>
                 </div>
             </form>
         </div>
@@ -118,8 +117,8 @@
 <!------------------------ FOOTER -------------------------->
     <div class="row fixed-bottom-lg">
         <div class="col-12 bg-dark text-white p-3 text-center">
-            <img class="img-color m-2" src="img/fblogo.png">
-            <img class="img-color m-2" src="img/instalogo.png">
+            <a href="#"><img class="img-color m-2" src="img/fblogo.png"></a>
+            <a href="#"><img class="img-color m-2" src="img/instalogo.png"></a>
             <p class="m-2" id="p-footer">ⓒ Copyright Aniluv Belgium 2021</p>
         </div>
     </div>
