--- a/menu.html
+++ b/menu.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--
-    <link rel="stylesheet" href="scss/style.css">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/custom.css">
     <title>Aniluv - Vegan Restaurant</title>
 </head>
@@ -284,8 +283,8 @@
 <!------------------------ FOOTER -------------------------->
     <div class="row mt-3">
         <div class="col bg-dark text-white p-3 text-center">
-            <img class="img-color m-2" src="img/fblogo.png">
-            <img class="img-color m-2" src="img/instalogo.png">
+            <a href="#"><img class="img-color m-2" src="img/fblogo.png"></a>
+            <a href="#"><img class="img-color m-2" src="img/instalogo.png"></a>
             <p class="m-2" id="p-footer">ⓒ Copyright Aniluv Belgium 2021</p>
         </div>
     </div>
