--- a/about-us.html
+++ b/about-us.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--
-    <link rel="stylesheet" href="scss/style.css">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/custom.css">
     <title>Aniluv - Vegan Restaurant</title>
 </head>
@@ -61,7 +60,7 @@
 
 <!-- text about us -->
     <div class="row mt-3 d-flex justify-content-center align-items-center">
-        <div class="col-8 col-md-6 border border-1 p-4">
+        <div class="col-8 col-md-6 border-bottom p-4">
             <p>If you care about animals and the environment, this is the right place for you.</p>
             <p>We have the best fresh products picked out to prepare all plant-based and delicous food that will make you have a deeper connection with your beliefs.</p>
             <p>If you don't know much about veganism, but your main concern is to eat good food, you are too at the right place. If interested, check out our events to find out more :)</p>
@@ -71,9 +70,9 @@
 
 <!-- map and restaurant information -->
 
-    <div class="row mt-3 d-flex justify-content-center align-items-center">
+    <div class="row mt-5 d-flex justify-content-center align-items-center">
         <div class="col col-md position-relative">
-            <iframe class="" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d760026.4702164851!2d2.997739956229029!3d50.917376269354094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c17d64edf39797%3A0x47ebf2b439e60ff2!2zQsOpbGdpY2E!5e0!3m2!1spt-BR!2sbe!4v1612002321587!5m2!1spt-BR!2sbe" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe class="border border-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d760026.4702164851!2d2.997739956229029!3d50.917376269354094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c17d64edf39797%3A0x47ebf2b439e60ff2!2zQsOpbGdpY2E!5e0!3m2!1spt-BR!2sbe!4v1612002321587!5m2!1spt-BR!2sbe" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <div class="pin position-absolute top-5 start-20" ><img src="img/map-pin.png"></div>
             <div class="pin position-absolute top-20 start-45" ><img src="img/map-pin.png"></div>
             <div class="pin position-absolute top-45 start-45"><img src="img/map-pin.png"></div>
@@ -125,8 +124,8 @@
 <!------------------------ FOOTER -------------------------->
     <div class="row mt-4">
         <div class="col-12 bg-dark text-white p-3 text-center">
-            <img class="img-color m-2" src="img/fblogo.png">
-            <img class="img-color m-2" src="img/instalogo.png">
+            <a href="#"><img class="img-color m-2" src="img/fblogo.png"></a>
+            <a href="#"><img class="img-color m-2" src="img/instalogo.png"></a>
             <p class="m-2" id="p-footer">ⓒ Copyright Aniluv Belgium 2021</p>
         </div>
     </div>
