--- a/gallery2.html
+++ b/gallery2.html
@@ -74,7 +74,7 @@
         <div class="card">
         <img src="img/food4.jpg" class="card-img-top">
         <div class="card-body">
-            <p class="card-text">"Loooooooove this toats!! #Aniluv"</p>
+            <p class="card-text">"Loooooooove these toats!! #Aniluv"</p>
             <p class="card-text"><small class="text-muted">Anna Leonard (@annaleo)</small></p>
         </div>
         </div>
