--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="row mt-3 ">
         <div class="col-sm col-md-4 bg-light p-5 rounded-lg m-sm-2 m-md-4">
             <h2 class="display-4">Special Offer !</h2>
-            <p class="lead">Ask for two dishes for delivery and get a free desert of your choice.</p>
+            <p class="lead">Ask for two dishes for delivery and get a free dessert of your choice.</p>
             <hr class="my-4">
             <p>Offer valid until Feb 20, 2021.</p>
             <a class="btn btn-dark btn-lg" href="menu.html" role="button">check out options</a>
